<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.presentation.ui.activities.MainInspectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

            <TextView
                android:id="@+id/tv_titDocActivity"
                style="@style/TextTitleRegular"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nueva_inspecci_n"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--                android:textSize="30sp"-->

            <ImageView
                android:id="@+id/ic_user"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_user"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="add"
                android:contentDescription="@string/hint_ic_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titDocActivity" />

            <TextView
                android:id="@+id/tv_inspector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/ic_user"
                app:layout_constraintTop_toTopOf="@+id/ic_user" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/textview_border_white"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_statusDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/statusdate"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_status"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />

            <TextView
                android:id="@+id/tv_subStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/substatus"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_statusDate"
                app:layout_constraintTop_toBottomOf="@+id/tv_statusDate" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/screen_background_dark_transparent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subStatus" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHeader">

            <TextView
                android:id="@+id/tv_titTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/tipo_de_inspecci_n_planeada"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleGroupNP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:weightSum="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_titTipo"
                app:layout_constraintTop_toBottomOf="@+id/tv_titTipo"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:onClick="OnButtonG1Checked"
                    android:text="@string/planeada" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:onClick="OnButtonG1Checked"
                    android:text="@string/no_planeada" />

            </com.google.android.material.button.MaterialButtonToggleGroup>


            <TextView
                android:id="@+id/tv_titProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/proyecto"
                app:layout_constraintStart_toStartOf="@+id/tv_titTipo"
                app:layout_constraintTop_toBottomOf="@+id/toggleGroupNP" />

            <Spinner
                android:id="@+id/spinner_project"
                style="@style/spinner_style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:tag="spinner_project"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_titProject"
                app:layout_constraintTop_toBottomOf="@+id/tv_titProject" />
            android:background="@android:drawable/btn_dropdown"
            <!--            android:background="@android:drawable/btn_dropdown"-->
            <!--            style="?attr/materialButtonOutlinedStyle"-->
            <!--                app:icon="ic"-->

            <TextView
                android:id="@+id/tv_titContractor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contratista"
                app:layout_constraintStart_toStartOf="@+id/tv_titProject"
                app:layout_constraintTop_toBottomOf="@+id/spinner_project" />

            <Spinner
                android:id="@+id/spinner_contractor"
                style="@style/spinner_style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:tag="spinner_contractor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_titContractor"
                app:layout_constraintTop_toBottomOf="@+id/tv_titContractor" />
            <!--                android:background="@android:drawable/btn_dropdown"-->

            <TextView
                android:id="@+id/tv_titLocType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tipo_de_ubicaci_n"
                app:layout_constraintStart_toStartOf="@+id/tv_titContractor"
                app:layout_constraintTop_toBottomOf="@+id/spinner_contractor" />

            <Spinner
                android:id="@+id/spinner_locType"
                style="@style/spinner_style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:tag="spinner_locType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_titLocType"
                app:layout_constraintTop_toBottomOf="@+id/tv_titLocType" />

            <TextView
                android:id="@+id/tv_titSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lugar_ubicaci_n"
                app:layout_constraintStart_toStartOf="@+id/spinner_locType"
                app:layout_constraintTop_toBottomOf="@+id/spinner_locType" />

            <Spinner
                android:id="@+id/spinner_site"
                style="@style/spinner_style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:tag="spinner_site"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_titSite"
                app:layout_constraintTop_toBottomOf="@+id/tv_titSite" />

            <TextView
                android:id="@+id/tv_titResponsible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/responsable_del_area_inspecc"
                app:layout_constraintStart_toStartOf="@+id/spinner_site"
                app:layout_constraintTop_toBottomOf="@+id/spinner_site" />

            <EditText
                android:id="@+id/et_reponsible"
                style="@style/TextBoxRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/Hint_responsible"
                android:ems="10"
                android:hint="@string/apellidos_nombres"
                android:inputType="textPersonName"
                android:text="@string/apellidos_nombres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_titResponsible"
                app:layout_constraintTop_toBottomOf="@+id/tv_titResponsible"
                tools:ignore="LabelFor" />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_reponsible" />

            <Button
                android:id="@+id/button"
                style="@style/TextButtonRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/general_button_border"
                android:onClick="onButtonSaveClicked"
                android:text="@string/guardar"
                android:textColor="@color/design_default_color_surface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/et_reponsible"
                app:layout_constraintTop_toBottomOf="@+id/divider" />
            <!--            android:fontFamily="sans-serif-light"-->
            <!--            android:textSize="24sp"-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>